<resources>
    <string name="app_name">Sweety Reety</string>
    <string name="menu_settings">Настройки</string>
    <string name="active_orders_title">Текущие заказы</string>
    <string name="order_details_title">Детали заказа</string>
    <string name="text_consumer">Заказчик:</string>
    <string name="order_number">Номер заказа:</string>
    <string name="text_due_date">Отдать:</string>
    <string name="text_real_price">Установленная цена:</string>
    <string name="text_default_price">Рекомендуемая цена:</string>
    <string name="text_done">Готовность заказа:</string>
    <string name="text_status">Заказ отдан:</string>
    <string name="order_done">Готов</string>
    <string name="order_in_progress">В процессе</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="price">%s грн</string>
    <string name="text_paid">Оплачен:</string>
    <string name="items">... %s шт</string>
    <string name="text_date_created">Создан:</string>
    <string name="text_comment">Комментарий:</string>
    <string name="order_edit_title">Изменение заказа</string>
    <string name="dialog_title">Предупреждение</string>
    <string name="save_changes">Сохранить изменения?</string>
    <string name="add_position">Добавить</string>
    <string name="order_create_title">Создание заказа</string>
    <string name="select_date">Выберите дату</string>
    <string name="input_consumer">Введите имя заказчика</string>
    <string name="input_comment">Добавте комментарий к заказу</string>
    <string name="positions_list">Список позиций:</string>
    <string name="error_empty_consumer">Заплните поле Заказчик</string>
    <string name="error_empty_due_date">Выберите требуемую дату заказа</string>
    <string name="error_empty_positions">Выбирете хотя бы одну позицию для заказа</string>
    <string name="menu_filter">Фильтр</string>
    <string name="filter_text">Фильтровать:</string>
    <string name="menu_products">Товары</string>
    <string name="menu_consumers">Заказчики</string>
    <string name="products_title">Мои товары</string>
    <string name="menu_history">История заказов</string>
    <string name="product_create_title">Создание товара</string>
    <string name="hint_product_name">Название товара</string>
    <string name="hint_product_price">Цена, грн</string>
    <string name="create">Создать</string>
    <string name="error_empty_product_name">Введите название товара</string>
    <string name="error_empty_product_price">Введите стоимость товара</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="product_edit_title">Редактирование товара</string>
    <string name="error_product_not_found">Товар не найден</string>
    <string name="delete_product_message">Вы уверены, что хотите удалить этот товар?</string>
    <string name="delete_order_message">Вы уверены, что хотите удалить этот заказ?</string>
    <string name="error_product_used">Этот товар нельзя удалить, т.к. он уже используется в заказе</string>
    <string name="orders_empty_text">Нет активных заказов</string>
    <string name="products_empty_text">Создайте товар</string>
    <string name="history_title">История заказов</string>
    <string name="dates_range">%s - %s</string>
    <string name="not_given">Не отдан</string>
    <string name="given">Отдан</string>
    <string name="date_created">Создан: %s</string>
    <string name="due_date">Отдать: %s</string>
    <string name="menu_statistics">Статистика</string>
    <string name="statistics_title">Статистика</string>
    <string name="total_sent">Всего продано на сумму:</string>
    <string name="total_paid_sent">Оплачено на сумму:</string>
    <string name="you_cant_create_order">Для того, что бы иметь возможность создать новый заказ, сначала создайте хотя бы один товар. Для этого на главном экране выберите пункт Меню/Товары</string>
    <string name="consumers_title">Заказчики</string>
    <string name="no_consumers">Пока нет заказчиков</string>
    <string name="consumer_details_title">Информация о заказчике</string>
    <string name="consumer_orders_sum">Всего заказов на сумму:</string>
    <string name="position_progress">Готовность</string>
    <string name="alert_done_clicked">Не все позиции готовы. Вы уверены, что хотите отметить этот заказ как полностью готов? Все позиции автоматически будут отмечены как готовы.</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="mart">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="per_month">Помесячно:</string>
    <string name="monthly_sold_sum">Продано на сумму:</string>
    <string name="monthly_orders">Заказов:</string>
    <string name="orders_amount">Всего заказов:</string>
    <string name="active_orders_amount">Активных заказов:</string>
    <string name="sync">Синхронизировать</string>
    <string name="sync_error">Ошибка при загрузке данных на сервер. Попробуйте позже.</string>
    <string name="keep_data_remote">Сохранить все данные в облако</string>
    <string name="sync_dialog_message">Все ваши данные будут сохранены в облако. Если в облаке уже хранятся ваши данные, то они будут перезатёрты. Начать загрузку данных в облако?</string>
</resources>
