<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_filter"
        android:icon="@drawable/ic_filter_white"
        android:title="@string/menu_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_menu"
        android:icon="@drawable/ic_menu_white"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/item_menu_products"
                android:title="@string/menu_products" />

            <item
                android:id="@+id/item_menu_consumers"
                android:title="@string/menu_consumers" />

            <item
                android:id="@+id/item_menu_history"
                android:title="@string/menu_history" />

            <item
                android:id="@+id/item_menu_statistics"
                android:title="@string/menu_statistics" />

            <item
                android:id="@+id/item_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>